[tool.poetry]
name = "csrspy"
version = "0.0.0"
description = "ITRF/NAD83CSRS coordinate transforms in Python"
authors = ["Taylor Denouden <taylordenouden@gmail.com>"]
packages = [
    { include = "csrspy" }
]
[tool.poetry.dependencies]
python = "^3.9"
pyproj = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
tox = "^4.6"
coverage = "^7.2"
pre-commit = "^3.3.3"
ruff = "^0.0.282"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
