[project]
name = "csrspy"
version = "0.0.0"
description = "ITRF/NAD83CSRS coordinate transforms in Python"
authors = [
    {name = "Taylor Denouden", email = "taylor.denouden@hakai.org"}
]
requires-python = ">=3.9"
dependencies = [
    "pyproj>=3.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "coverage>=7.2",
]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.6.2",
    "tox>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csrspy"]
